<resources>
    <string name="app_name">E-Tracker</string>
    <string name="register">Register</string>
    <string name="attendance">Attendance</string>
    <string name="edit">Edit</string>
    <string name="dob">Date of Birth :</string>
    <string name="empty_field_error">Field can\'t be empty</string>
    <string name="registration_error">Employee code already present</string>
    <string name="registration_done">Details Saved</string>
    <string name="enter_your_employee_code">Enter your Employee Code</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="enter_employee_code">Enter Employee Code</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="pass_error">Please enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search_employee">Search Employee</string>
    <string name="employee_code">E-Code:</string>
    <string name="employee_name">E-Name:</string>
    <string name="employee_email">E-email:</string>
    <string name="delete_all_records">Delete All Records</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="export">Export</string>
    <string name="get_attendance">Get Attendance</string>
    <string name="add_fingerprint">Add Fingerprint</string>
    <string name="scan_fingerprint">Scan Fingerprint</string>
    <string name="export_all_employee_details">Export Employee Details</string>
    <string name="export_all_attendance_record">Export Attendance Record</string>
    <string name="export_msg">File Exported to the device</string>
    <string name="date_format">yyMMddHHmmss</string>
    <string name="no_record_found">No Record Found</string>
    <string name="wrond_password">Wrong Password</string>
    <string name="checked_in">Checked In</string>
    <string name="checked_out">Checked Out</string>
</resources>
